--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0127.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0127.html
@@ -470,9 +470,9 @@
             <ins class="alt" title="nlp 1.00">διαφοράν.</ins>
           </span>
         </span>
-        <span id="w_90" class="ocr_word" title="bbox 1837 692 1902 727">
+        <span id="w_90_0" class="ocr_word" title="bbox 1837 692 1902 727">
           <span class="alternatives">
-            <ins title="nlp 2.00">89ν</ins>
+            <ins class="alt" title="nlp 2.00">89v</ins>
           </span>
         </span>
       </span>
