--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0257.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0257.html
@@ -287,9 +287,14 @@
             <ins class="alt" title="nlp 1.00">ἐστιν</ins>
           </span>
         </span>
-        <span id="w_47" class="ocr_word" title="bbox 651 443 711 499">
+        <span id="w_47_0" class="ocr_word" title="bbox 651 443 711 499">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἡ&amp;#x003C;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἡ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_47_1" class="ocr_word" title="bbox 651 443 711 499">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_48" class="ocr_word" title="bbox 727 461 821 499" lang="grc">
@@ -330,11 +335,6 @@
         <span id="w_55" class="ocr_word" title="bbox 1631 467 1673 491" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_56" class="ocr_word" title="bbox 1696 451 1824 506" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἕτερον</ins>
           </span>
         </span>
       </span>
@@ -1719,12 +1719,17 @@
         </span>
         <span id="w_325" class="ocr_word" title="bbox 1361 1825 1433 1878" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὡς</ins>
+            <ins title="nlp 2.00">ὡς</ins>
           </span>
         </span>
-        <span id="w_326" class="ocr_word" title="bbox 1453 1825 1551 1881" lang="grc">
+        <span id="w_326_0" class="ocr_word" title="bbox 1453 1825 1551 1881">
           <span class="alternatives">
-            <ins title="nlp 2.00">υἱὸν&amp;#x003C;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὡς</ins>
+          </span>
+        </span>
+        <span id="w_326_1" class="ocr_word" title="bbox 1453 1825 1551 1881">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">υἱὸν&amp;#x003Ε;</ins>
           </span>
         </span>
         <span id="w_327" class="ocr_word" title="bbox 1573 1827 1738 1880" lang="grc">
@@ -2870,8 +2875,7 @@
         </span>
         <span id="w_547" class="ocr_word" title="bbox 543 2920 675 2967">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xstpaXY]</ins>
-            <del title="nlp 0.90">xstpaXY</del>
+            <ins title="nlp 2.00">κεφαλὴ</ins>
           </span>
         </span>
         <span id="w_548" class="ocr_word" title="bbox 703 2923 843 2966">
@@ -2882,8 +2886,7 @@
         </span>
         <span id="w_549" class="ocr_word" title="bbox 870 2922 1022 2969">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xe-faXYjv</ins>
-            <del title="nlp 0.90">xe-faXYjv</del>
+            <ins title="nlp 2.00">κεφαλὴν</ins>
           </span>
         </span>
         <span id="w_550" class="ocr_word" title="bbox 1049 2924 1126 2958">
@@ -2933,7 +2936,7 @@
         </span>
         <span id="w_559" class="ocr_word" title="bbox 222 2979 272 3017" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τὸ</ins>
+            <ins title="nlp 2.00">τὸ</ins>
           </span>
         </span>
         <span id="w_560" class="ocr_word" title="bbox 298 2982 378 3011">
@@ -3101,8 +3104,7 @@
         </span>
         <span id="w_592" class="ocr_word" title="bbox 851 3110 904 3131">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">etti</ins>
-            <del title="nlp 0.90">etti</del>
+            <ins title="nlp 2.00">ἐπὶ</ins>
           </span>
         </span>
         <span id="w_593" class="ocr_word" title="bbox 929 3109 993 3131">
