--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0232.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0232.html
@@ -342,7 +342,7 @@
         </span>
         <span id="w_63" class="ocr_word" title="bbox 797 466 914 521" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἐστὶ&amp;#x003E;</ins>
+            <ins title="nlp 2.00">#x003E;</ins>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 946 483 1058 522" lang="grc">
@@ -1416,9 +1416,14 @@
             <ins class="alt" title="nlp 1.00">γραμμὴν</ins>
           </span>
         </span>
-        <span id="w_270" class="ocr_word" title="bbox 1023 2270 1084 2326">
+        <span id="w_270_0" class="ocr_word" title="bbox 1023 2270 1084 2326">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἢ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#003C;ἢ&amp;#003E;</ins>
+          </span>
+        </span>
+        <span id="w_270_1" class="ocr_word" title="bbox 1023 2270 1084 2326">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1116 2285 1414 2325" lang="grc">
@@ -1439,11 +1444,6 @@
         <span id="w_274" class="ocr_word" title="bbox 1684 2285 1737 2309" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τατοῦ</ins>
-          </span>
-        </span>
-        <span id="w_275" class="ocr_word" title="bbox 1878 2281 2098 2322" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σώματος</ins>
           </span>
         </span>
       </span>
