--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0035.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0035.html
@@ -109,19 +109,19 @@
             <del title="nlp 0.90">om.</del>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 1766 265 1782 311" lang="grc">
+        <span id="w_18_0" class="ocr_word" title="bbox 1766 265 1782 311">
           <span class="alternatives">
-            <ins title="nlp 2.00">|\</ins>
+            <ins class="alt" title="nlp 2.00">||</ins>
+          </span>
+        </span>
+        <span id="w_18_1" class="ocr_word" title="bbox 1766 265 1782 311">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1810 266 1853 299">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">35</ins>
-          </span>
-        </span>
-        <span id="w_20" class="ocr_word" title="bbox 1879 279 1944 300" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τετ.</ins>
           </span>
         </span>
       </span>
@@ -423,8 +423,7 @@
         </span>
         <span id="w_77" class="ocr_word" title="bbox 873 509 964 551">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cxitl.</ins>
-            <del title="nlp 0.90">cxitl.</del>
+            <ins title="nlp 2.00">expl.</ins>
           </span>
         </span>
       </span>
@@ -552,7 +551,7 @@
         </span>
         <span id="w_102" class="ocr_word" title="bbox 568 648 634 670">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">0111.</ins>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_103" class="ocr_word" title="bbox 665 636 677 681">
@@ -648,7 +647,7 @@
         </span>
         <span id="w_119" class="ocr_word" title="bbox 266 755 328 788">
           <span class="alternatives">
-            <ins title="nlp 2.00">10ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
         <span id="w_120" class="ocr_word" title="bbox 360 755 407 787">
@@ -791,7 +790,7 @@
         </span>
         <span id="w_147" class="ocr_word" title="bbox 815 815 886 854" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_148" class="ocr_word" title="bbox 919 812 1001 854">
@@ -822,8 +821,7 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1408 812 1424 858">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">jj</ins>
-            <del title="nlp 0.90">jj</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_154" class="ocr_word" title="bbox 1461 826 1537 856" lang="grc">
@@ -879,13 +877,12 @@
         </span>
         <span id="w_163" class="ocr_word" title="bbox 664 928 732 982" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[Η.</ins>
+            <ins title="nlp 2.00">Η.</ins>
           </span>
         </span>
         <span id="w_164" class="ocr_word" title="bbox 766 932 922 970">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Omoiit</ins>
-            <del title="nlp 0.90">Omoiit</del>
+            <ins title="nlp 2.00">Omont</ins>
           </span>
         </span>
         <span id="w_165" class="ocr_word" title="bbox 955 929 994 970">
@@ -941,9 +938,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_175" class="ocr_word" title="bbox 365 999 475 1039" lang="grc">
+        <span id="w_175_0" class="ocr_word" title="bbox 365 999 475 1039">
           <span class="alternatives">
-            <ins title="nlp 2.00">33–65</ins>
+            <ins class="alt" title="nlp 2.00">33—65</ins>
+          </span>
+        </span>
+        <span id="w_175_1" class="ocr_word" title="bbox 365 999 475 1039">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_176" class="ocr_word" title="bbox 555 997 677 1038">
@@ -974,12 +976,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quern</ins>
             <del title="nlp 0.90">quern</del>
-          </span>
-        </span>
-        <span id="w_181" class="ocr_word" title="bbox 1652 1000 1946 1054">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iuscripsimiis</ins>
-            <del title="nlp 0.90">iuscripsimiis</del>
           </span>
         </span>
       </span>
@@ -1910,8 +1906,7 @@
         </span>
         <span id="w_349" class="ocr_word" title="bbox 684 1863 795 1905">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iufra</ins>
-            <del title="nlp 0.90">iufra</del>
+            <ins title="nlp 2.00">infra</ins>
           </span>
         </span>
         <span id="w_350" class="ocr_word" title="bbox 827 1864 1102 1917">
@@ -2002,8 +1997,7 @@
         </span>
         <span id="w_364" class="ocr_word" title="bbox 1596 1934 1812 1976">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nonnuUis</ins>
-            <del title="nlp 0.90">nonnuUis</del>
+            <ins title="nlp 2.00">nonnullis</ins>
           </span>
         </span>
         <span id="w_365" class="ocr_word" title="bbox 1843 1934 1947 1975">
@@ -2470,8 +2464,7 @@
         </span>
         <span id="w_450" class="ocr_word" title="bbox 317 2312 335 2361">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_451" class="ocr_word" title="bbox 363 2315 381 2347">
@@ -2580,8 +2573,7 @@
         </span>
         <span id="w_471" class="ocr_word" title="bbox 361 2372 376 2419">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_472" class="ocr_word" title="bbox 413 2374 463 2407">
@@ -2760,7 +2752,7 @@
         </span>
         <span id="w_505" class="ocr_word" title="bbox 307 2503 327 2535">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">5</ins>
+            <ins title="nlp 2.00">|| 5</ins>
           </span>
         </span>
         <span id="w_506" class="ocr_word" title="bbox 354 2501 391 2535" lang="grc">
@@ -2980,8 +2972,7 @@
         </span>
         <span id="w_546" class="ocr_word" title="bbox 286 2628 302 2674">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_547" class="ocr_word" title="bbox 331 2630 374 2663">
@@ -3191,7 +3182,7 @@
         </span>
         <span id="w_585" class="ocr_word" title="bbox 795 2760 891 2805" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> ἀπορ.</ins>
+            <ins title="nlp 2.00">ἀπορ.</ins>
           </span>
         </span>
         <span id="w_586" class="ocr_word" title="bbox 955 2760 993 2793">
@@ -3401,8 +3392,7 @@
         </span>
         <span id="w_626" class="ocr_word" title="bbox 1066 2881 1114 2910">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xdJ</ins>
-            <del title="nlp 0.90">xdJ</del>
+            <ins title="nlp 2.00">τῶ</ins>
           </span>
         </span>
         <span id="w_627" class="ocr_word" title="bbox 1132 2877 1221 2922" lang="grc">
@@ -3534,8 +3524,7 @@
       <span class="ocr_line" title="bbox 132 2988 1942 3039">
         <span id="w_651" class="ocr_word" title="bbox 132 2988 234 3023">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ixEtOE</ins>
-            <del title="nlp 0.90">ixEtOE</del>
+            <ins title="nlp 2.00">ἐκεῖσε</ins>
           </span>
         </span>
         <span id="w_652" class="ocr_word" title="bbox 259 2993 317 3036" lang="grc">
@@ -3694,7 +3683,7 @@
         </span>
         <span id="w_682" class="ocr_word" title="bbox 1143 3052 1187 3086" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">20 κιν.] αὐτῆς</ins>
+            <ins title="nlp 2.00">κιν.] αὐτῆς</ins>
           </span>
         </span>
         <span id="w_683" class="ocr_word" title="bbox 1466 3050 1521 3084">
@@ -3818,8 +3807,7 @@
       <span class="ocr_line" title="bbox 133 3163 1946 3214">
         <span id="w_705" class="ocr_word" title="bbox 133 3163 319 3209">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">otaXEyExai,</ins>
-            <del title="nlp 0.90">otaXEyExai,</del>
+            <ins title="nlp 2.00">διαλέγεται,</ins>
           </span>
         </span>
         <span id="w_706" class="ocr_word" title="bbox 346 3179 383 3200" lang="grc">
@@ -3928,8 +3916,7 @@
         </span>
         <span id="w_726" class="ocr_word" title="bbox 227 3220 242 3267">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">W</ins>
-            <del title="nlp 0.90">W</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_727" class="ocr_word" title="bbox 272 3223 313 3256">
