--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0183.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0183.html
@@ -940,9 +940,14 @@
             <ins class="alt" title="nlp 1.00">ἐπειδὴ</ins>
           </span>
         </span>
-        <span id="w_183" class="ocr_word" title="bbox 1312 1374 1392 1431">
+        <span id="w_183_0" class="ocr_word" title="bbox 1312 1374 1392 1431">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;οὐ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;οὐ&gt;</ins>
+          </span>
+        </span>
+        <span id="w_183_1" class="ocr_word" title="bbox 1312 1374 1392 1431">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1424 1378 1548 1431" lang="grc">
@@ -958,11 +963,6 @@
         <span id="w_186" class="ocr_word" title="bbox 1732 1395 1774 1420" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_187" class="ocr_word" title="bbox 1794 1379 1878 1415">
-          <span class="alternatives">
-            <ins title="nlp 2.00">237r</ins>
           </span>
         </span>
       </span>
@@ -1648,19 +1648,19 @@
             <ins class="alt" title="nlp 1.00">ζητηθέντων</ins>
           </span>
         </span>
-        <span id="w_320" class="ocr_word" title="bbox 1359 2345 1481 2403" lang="grc">
+        <span id="w_320_0" class="ocr_word" title="bbox 1359 2345 1481 2403">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;περὶ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;περὶ&gt;</ins>
+          </span>
+        </span>
+        <span id="w_320_1" class="ocr_word" title="bbox 1359 2345 1481 2403">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_321" class="ocr_word" title="bbox 1518 2363 1585 2402" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
-        <span id="w_322" class="ocr_word" title="bbox 1624 2350 1808 2402" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαφορᾶς</ins>
           </span>
         </span>
       </span>
@@ -2313,7 +2313,7 @@
       <span class="ocr_line" title="bbox 69 3048 1877 3100">
         <span id="w_446" class="ocr_word" title="bbox 69 3048 110 3082" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">22 ποιητὴν]</ins>
+            <ins title="nlp 2.00">ποιητὴν]</ins>
           </span>
         </span>
         <span id="w_447" class="ocr_word" title="bbox 307 3055 404 3089">
