--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0258.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0258.html
@@ -1336,7 +1336,7 @@
         </span>
         <span id="w_256" class="ocr_word" title="bbox 746 1530 839 1585" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅσα</ins>
+            <ins title="nlp 2.00">(ὅσα</ins>
           </span>
         </span>
         <span id="w_257" class="ocr_word" title="bbox 870 1547 942 1584" lang="grc">
@@ -2688,8 +2688,7 @@
         </span>
         <span id="w_515" class="ocr_word" title="bbox 969 2978 1036 3000">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ora.</ins>
-            <del title="nlp 0.90">ora.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_516" class="ocr_word" title="bbox 1063 2968 1093 3000" lang="grc">
@@ -2741,8 +2740,7 @@
         </span>
         <span id="w_525" class="ocr_word" title="bbox 2111 2976 2169 3001">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oaa</ins>
-            <del title="nlp 0.90">oaa</del>
+            <ins title="nlp 2.00">ὅσα</ins>
           </span>
         </span>
       </span>
@@ -2964,8 +2962,7 @@
         </span>
         <span id="w_566" class="ocr_word" title="bbox 1765 3146 1956 3189">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ptiilopono</ins>
-            <del title="nlp 0.90">Ptiilopono</del>
+            <ins title="nlp 2.00">Philopono</ins>
           </span>
         </span>
         <span id="w_567" class="ocr_word" title="bbox 1988 3145 2168 3184">
