--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0233.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0233.html
@@ -352,16 +352,11 @@
         </span>
         <span id="w_65" class="ocr_word" title="bbox 1772 536 1849 559" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπι-</ins>
+            <ins title="nlp 2.00">ἐπιφάνειαν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 169 577 1849 643">
-        <span id="w_66" class="ocr_word" title="bbox 169 577 327 631" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φάνειαν</ins>
-          </span>
-        </span>
         <span id="w_67" class="ocr_word" title="bbox 360 595 422 619" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -434,9 +429,14 @@
             <ins class="alt" title="nlp 1.00">ῥυεῖσα</ins>
           </span>
         </span>
-        <span id="w_81" class="ocr_word" title="bbox 871 649 932 703">
+        <span id="w_81_0" class="ocr_word" title="bbox 871 649 932 703">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἡ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἡ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_81_1" class="ocr_word" title="bbox 871 649 932 703">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_82" class="ocr_word" title="bbox 963 666 1120 706" lang="grc">
@@ -462,11 +462,6 @@
         <span id="w_86" class="ocr_word" title="bbox 1696 659 1757 697" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δεῖ</ins>
-          </span>
-        </span>
-        <span id="w_87" class="ocr_word" title="bbox 1782 673 1846 697" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
       </span>
@@ -1213,7 +1208,7 @@
       <span class="ocr_line" title="bbox 158 1898 1837 1965">
         <span id="w_229" class="ocr_word" title="bbox 158 1898 217 1954">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἃ&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_230" class="ocr_word" title="bbox 253 1916 446 1956" lang="grc">
@@ -1933,9 +1928,14 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_369" class="ocr_word" title="bbox 663 2692 771 2749">
+        <span id="w_369_0" class="ocr_word" title="bbox 663 2692 771 2749">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;γὰρ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;γὰρ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_369_1" class="ocr_word" title="bbox 663 2692 771 2749">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_370" class="ocr_word" title="bbox 811 2708 989 2751" lang="grc">
@@ -1971,11 +1971,6 @@
         <span id="w_376" class="ocr_word" title="bbox 1700 2717 1781 2743" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τινα</ins>
-          </span>
-        </span>
-        <span id="w_377" class="ocr_word" title="bbox 1803 2706 1892 2742">
-          <span class="alternatives">
-            <ins title="nlp 2.00">260v</ins>
           </span>
         </span>
       </span>
