--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0184.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0184.html
@@ -2405,9 +2405,9 @@
             <del title="nlp 0.90">om.</del>
           </span>
         </span>
-        <span id="w_455" class="ocr_word" title="bbox 2055 3200 2085 3234" lang="grc">
+        <span id="w_455_0" class="ocr_word" title="bbox 2055 3200 2085 3234">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κ</ins>
+            <ins class="alt" title="nlp 2.00">H</ins>
           </span>
         </span>
       </span>
