--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0234.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0234.html
@@ -1318,7 +1318,7 @@
         </span>
         <span id="w_248" class="ocr_word" title="bbox 1069 1797 1170 1853">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οὖν&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1191 1815 1238 1839" lang="grc">
