--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0259.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0259.html
@@ -367,7 +367,7 @@
         </span>
         <span id="w_68" class="ocr_word" title="bbox 1227 512 1307 567" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
+            <ins title="nlp 2.00">[ἐπὶ</ins>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 1339 515 1380 553" lang="grc">
@@ -2563,8 +2563,7 @@
         </span>
         <span id="w_489" class="ocr_word" title="bbox 1648 2918 1759 2951">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’P</ins>
-            <del title="nlp 0.90">’P</del>
+            <ins title="nlp 2.00">HK1P</ins>
           </span>
         </span>
       </span>
