--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0129.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0129.html
@@ -554,14 +554,14 @@
             <ins class="alt" title="nlp 1.00">ὁμώνυμον</ins>
           </span>
         </span>
-        <span id="w_107" class="ocr_word" title="bbox 1658 1192 1718 1244" lang="grc">
+        <span id="w_107_0" class="ocr_word" title="bbox 1658 1192 1718 1244">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐν</ins>
+            <ins class="alt" title="nlp 2.00">(ἐν</ins>
           </span>
         </span>
-        <span id="w_108" class="ocr_word" title="bbox 1749 1207 1820 1245" lang="grc">
+        <span id="w_107_1" class="ocr_word" title="bbox 1658 1192 1718 1244">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -663,9 +663,9 @@
             <ins class="alt" title="nlp 1.00">ὑπογραφέσθω</ins>
           </span>
         </span>
-        <span id="w_128" class="ocr_word" title="bbox 1827 1329 1888 1364">
+        <span id="w_128_0" class="ocr_word" title="bbox 1827 1329 1888 1364">
           <span class="alternatives">
-            <ins title="nlp 2.00">93ν</ins>
+            <ins class="alt" title="nlp 2.00">93v</ins>
           </span>
         </span>
       </span>
@@ -789,16 +789,11 @@
         </span>
         <span id="w_152" class="ocr_word" title="bbox 1730 1483 1824 1520" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γεω-</ins>
+            <ins title="nlp 2.00">γεωμετρεὶν·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 151 1534 1825 1590">
-        <span id="w_153" class="ocr_word" title="bbox 151 1548 317 1587" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μετρεῖν·</ins>
-          </span>
-        </span>
         <span id="w_154" class="ocr_word" title="bbox 350 1548 461 1572" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦτο</ins>
@@ -965,16 +960,11 @@
         </span>
         <span id="w_186" class="ocr_word" title="bbox 1765 1690 1824 1714" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀν-</ins>
+            <ins title="nlp 2.00">ἀνθρώπῳ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 154 1740 1827 1796">
-        <span id="w_187" class="ocr_word" title="bbox 154 1740 302 1793" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θρώπῳ</ins>
-          </span>
-        </span>
         <span id="w_188" class="ocr_word" title="bbox 350 1756 391 1779" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
@@ -2385,7 +2375,7 @@
         </span>
         <span id="w_453" class="ocr_word" title="bbox 511 3179 614 3217" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὕτω</ins>
+            <ins title="nlp 2.00">οὕτω</ins>
           </span>
         </span>
         <span id="w_454" class="ocr_word" title="bbox 641 3178 678 3210">
