--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0235.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0235.html
@@ -1086,7 +1086,7 @@
         </span>
         <span id="w_207" class="ocr_word" title="bbox 1529 1275 1758 1330" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;φαινόμενα</ins>
+            <ins title="nlp 2.00">φαινόμενα</ins>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 1789 1276 1832 1315" lang="grc">
@@ -1098,7 +1098,7 @@
       <span class="ocr_line" title="bbox 152 1343 1830 1403">
         <span id="w_209" class="ocr_word" title="bbox 152 1348 271 1403" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ποσὰ&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_210" class="ocr_word" title="bbox 303 1364 355 1388" lang="grc">
