--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0185.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0185.html
@@ -455,14 +455,14 @@
             <ins class="alt" title="nlp 1.00">οὐσία</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 1546 691 1644 747">
+        <span id="w_87_0" class="ocr_word" title="bbox 1546 691 1644 747">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;καὶ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;καὶ&gt;</ins>
           </span>
         </span>
-        <span id="w_88" class="ocr_word" title="bbox 1666 693 1837 733" lang="grc">
+        <span id="w_87_1" class="ocr_word" title="bbox 1546 691 1644 747">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθόλου</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
