--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0236.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0236.html
@@ -432,9 +432,9 @@
             <ins class="alt" title="nlp 1.00">ἀλλ’</ins>
           </span>
         </span>
-        <span id="w_82" class="ocr_word" title="bbox 2092 569 2174 605">
+        <span id="w_82_0" class="ocr_word" title="bbox 2092 569 2174 605">
           <span class="alternatives">
-            <ins title="nlp 2.00">261ν</ins>
+            <ins class="alt" title="nlp 2.00">261v</ins>
           </span>
         </span>
       </span>
@@ -675,9 +675,14 @@
             <ins class="alt" title="nlp 1.00">ἐκεῖ</ins>
           </span>
         </span>
-        <span id="w_129" class="ocr_word" title="bbox 1560 839 1628 895">
+        <span id="w_129_0" class="ocr_word" title="bbox 1560 839 1628 895">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;εἰ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#003C;εἰ&amp;#003E;</ins>
+          </span>
+        </span>
+        <span id="w_129_1" class="ocr_word" title="bbox 1560 839 1628 895">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_130" class="ocr_word" title="bbox 1650 841 1761 881" lang="grc">
@@ -693,11 +698,6 @@
         <span id="w_132" class="ocr_word" title="bbox 1905 856 1960 880" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῷ</ins>
-          </span>
-        </span>
-        <span id="w_133" class="ocr_word" title="bbox 1995 854 2106 881" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποσῷ</ins>
           </span>
         </span>
       </span>
@@ -1112,18 +1112,13 @@
             <ins class="alt" title="nlp 1.00">ποσά</ins>
           </span>
         </span>
-        <span id="w_214" class="ocr_word" title="bbox 1989 1255 2110 1308" lang="grc">
+        <span id="w_214_0" class="ocr_word" title="bbox 1989 1255 2110 1308">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀντιδιῄρηται</ins>
+            <ins class="alt" title="nlp 2.00">(ἀντιδιῄρηται</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 423 1324 2110 1382">
-        <span id="w_216" class="ocr_word" title="bbox 639 1326 709 1380" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
-          </span>
-        </span>
         <span id="w_217" class="ocr_word" title="bbox 742 1327 784 1366" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
@@ -2051,7 +2046,7 @@
         </span>
         <span id="w_397" class="ocr_word" title="bbox 2063 2359 2109 2400" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἁ·</ins>
+            <ins title="nlp 2.00">τὰ</ins>
           </span>
         </span>
       </span>
@@ -2386,7 +2381,7 @@
       <span class="ocr_line" title="bbox 354 2823 2174 2872">
         <span id="w_459" class="ocr_word" title="bbox 560 2825 657 2867" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἰδίου</ins>
+            <ins title="nlp 2.00">ἰδίου</ins>
           </span>
         </span>
         <span id="w_460" class="ocr_word" title="bbox 684 2828 742 2859" lang="grc">
@@ -2442,7 +2437,7 @@
         </span>
         <span id="w_470" class="ocr_word" title="bbox 1902 2823 2174 2870" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(παραδιδόμενον</ins>
+            <ins title="nlp 2.00">παραδιδόμενον</ins>
           </span>
         </span>
       </span>
