--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0130.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0130.html
@@ -965,9 +965,14 @@
             <ins class="alt" title="nlp 1.00">15</ins>
           </span>
         </span>
-        <span id="w_187" class="ocr_word" title="bbox 433 1218 695 1274" lang="grc">
+        <span id="w_187_0" class="ocr_word" title="bbox 433 1218 695 1274">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀντιστρέφει</ins>
+            <ins class="alt" title="nlp 2.00">(ἀντιστρέρέφει</ins>
+          </span>
+        </span>
+        <span id="w_187_1" class="ocr_word" title="bbox 433 1218 695 1274">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_188" class="ocr_word" title="bbox 726 1220 796 1273" lang="grc">
@@ -1018,11 +1023,6 @@
         <span id="w_197" class="ocr_word" title="bbox 1793 1219 1998 1273" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δεκτικόν),</ins>
-          </span>
-        </span>
-        <span id="w_198" class="ocr_word" title="bbox 2030 1217 2110 1258" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀλλ’</ins>
           </span>
         </span>
       </span>
@@ -1263,9 +1263,9 @@
             <ins class="alt" title="nlp 1.00">ἐπιστήμης</ins>
           </span>
         </span>
-        <span id="w_245" class="ocr_word" title="bbox 2116 1495 2175 1530" lang="grc">
+        <span id="w_245_0" class="ocr_word" title="bbox 2116 1495 2175 1530">
           <span class="alternatives">
-            <ins title="nlp 2.00">94ν</ins>
+            <ins class="alt" title="nlp 2.00">94v</ins>
           </span>
         </span>
       </span>
@@ -1924,8 +1924,7 @@
         </span>
         <span id="w_374" class="ocr_word" title="bbox 1788 2393 1853 2416">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_375" class="ocr_word" title="bbox 1884 2383 1910 2414">
