--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0260.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0260.html
@@ -318,9 +318,14 @@
             <ins class="alt" title="nlp 1.00">παροῦσα</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 1287 788 1456 844">
+        <span id="w_57_0" class="ocr_word" title="bbox 1287 788 1456 844">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;πρᾶξις&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;πρᾶξις&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_57_1" class="ocr_word" title="bbox 1287 788 1456 844">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 1497 789 1564 828" lang="grc">
@@ -336,11 +341,6 @@
         <span id="w_60" class="ocr_word" title="bbox 1683 790 1819 842" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρῶτα</ins>
-          </span>
-        </span>
-        <span id="w_61" class="ocr_word" title="bbox 1852 791 2104 843" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παραδίδωσι,</ins>
           </span>
         </span>
       </span>
@@ -1411,7 +1411,7 @@
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1326 2038 1401 2092" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῷ</ins>
+            <ins title="nlp 2.00">(τῷ</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1433 2052 1504 2092" lang="grc">
@@ -1473,7 +1473,7 @@
         </span>
         <span id="w_282" class="ocr_word" title="bbox 1113 2107 1178 2160" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐ</ins>
+            <ins title="nlp 2.00">(οὐ</ins>
           </span>
         </span>
         <span id="w_283" class="ocr_word" title="bbox 1210 2122 1280 2160" lang="grc">
@@ -2388,8 +2388,7 @@
         </span>
         <span id="w_455" class="ocr_word" title="bbox 1957 3099 2089 3134">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cfEvexai</ins>
-            <del title="nlp 0.90">cfEvexai</del>
+            <ins title="nlp 2.00">φένεται</ins>
           </span>
         </span>
         <span id="w_456" class="ocr_word" title="bbox 2113 3087 2139 3120">
@@ -2417,8 +2416,7 @@
         </span>
         <span id="w_460" class="ocr_word" title="bbox 683 3155 806 3188">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Zelleii</ins>
-            <del title="nlp 0.90">Zelleii</del>
+            <ins title="nlp 2.00">Zelleri</ins>
           </span>
         </span>
         <span id="w_461" class="ocr_word" title="bbox 826 3155 914 3188">
