--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0131.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0131.html
@@ -76,8 +76,7 @@
       <span class="ocr_line" title="bbox 117 620 1791 685">
         <span id="w_11" class="ocr_word" title="bbox 117 652 148 685">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins title="nlp 2.00">p.</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 172 638 269 681">
@@ -1177,16 +1176,11 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1740 2035 1796 2073" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέ-</ins>
+            <ins title="nlp 2.00">λέγουσι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 117 2102 1795 2165">
-        <span id="w_227" class="ocr_word" title="bbox 117 2125 222 2163" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γουσι</ins>
-          </span>
-        </span>
         <span id="w_228" class="ocr_word" title="bbox 260 2126 301 2151" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
