--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0261.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0261.html
@@ -1356,7 +1356,7 @@
         </span>
         <span id="w_261" class="ocr_word" title="bbox 1311 1735 1419 1791" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθ’</ins>
+            <ins title="nlp 2.00">(καθ’</ins>
           </span>
         </span>
         <span id="w_262" class="ocr_word" title="bbox 1459 1753 1551 1778" lang="grc">
@@ -1723,7 +1723,7 @@
         </span>
         <span id="w_334" class="ocr_word" title="bbox 1030 2151 1126 2205" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πᾶς</ins>
+            <ins title="nlp 2.00">(πᾶς</ins>
           </span>
         </span>
         <span id="w_335" class="ocr_word" title="bbox 1156 2152 1226 2207" lang="grc">
@@ -1917,7 +1917,7 @@
         </span>
         <span id="w_371" class="ocr_word" title="bbox 195 2526 294 2559">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">81)25</ins>
+            <ins title="nlp 2.00">8b25</ins>
           </span>
         </span>
         <span id="w_372" class="ocr_word" title="bbox 339 2515 574 2570" lang="grc">
@@ -2289,8 +2289,7 @@
         </span>
         <span id="w_441" class="ocr_word" title="bbox 279 3022 328 3043">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tw</ins>
-            <del title="nlp 0.90">tw</del>
+            <ins title="nlp 2.00">τῶ</ins>
           </span>
         </span>
         <span id="w_442" class="ocr_word" title="bbox 356 3010 385 3042">
